--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,12 @@
         <activity android:name=".Activities.AddStaffActivity" />
         <activity
             android:name=".Activities.EditTableActivity"
-            android:label="Sửa phiếu"
+            android:label="Sửa bàn ăn"
             android:theme="@style/PopUpActivity" />
         <activity android:name=".Activities.PaymentActivity" />
         <activity
             android:name=".Activities.AmountMenuActivity"
-            android:label="số lượng sản phẩm"
+            android:label="số lượng món ăn"
             android:theme="@style/PopUpActivity" />
         <activity android:name=".Activities.AddCategoryActivity" />
         <activity android:name=".Activities.AddMenuActivity" />
